--- a/test.html
+++ b/test.html
@@ -14,35 +14,35 @@
             /* Icon a faire */
             <div class="Onglet3"><a href="https://accounts.google.com/ServiceLogin?hl=fr&passive=true&continue=https://www.google.fr/">Connexion</a></div>
     </div>
-</header>git
+</header>
 
-  
+
   <div id="Logo"><a href="https://imgur.com/aifc0hq"><img src="https://i.imgur.com/aifc0hq.png" title="source: imgur.com"/></a></div>
-<div class="Box">Barre de recherche</div>
-
+<div> <input type="text" name="" placeholder="">
 <div id="Buttons">
     <div class="Button1">Recherche Google</div>
-    <div class="Button2">J'ai de la chance</div>
+    <div class="Button1">J'ai de la chance</div>
 </div>
 
 <footer>
-    <div class="Country">France</div>
-    <div class="Footerlink"><a href="https://www.google.fr/intl/fr_fr/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicit&egrave;</a></div>
 
-    <div class="Footerlink"><a href="https://www.google.fr/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Entreprise</a></div>
+    <div id="Country">France</div>
 
-    <div class="Footerlink"><a href="https://www.google.fr/intl/fr_fr/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1">&Agrave; propos</a></div>
+   <div class="Footer"><a href="https://www.google.fr/intl/fr_fr/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicit&eacute;</a></div>
 
-   <div class="Footerlink"><a href="https://support.google.com/websearch?p=fr_consumer_info&hl=fr&fg=1">Info consommateurs</a></div>
+   <div class="Footer"><a href="https://www.google.fr/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Entreprise</a></div>
 
-   <div class="Footerlink"><a href="https://www.google.fr/intl/fr_fr/policies/privacy/?fg=1">Confidentialit&eacute;</a></div>
+   <div class="Footer"><a href="https://www.google.fr/intl/fr_fr/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1">&Agrave; propos</a></div>
 
-   <div class="Footerlink"><a href="https://www.google.fr/intl/fr_fr/policies/terms/?fg=1">Conditions</a></div>
+   <div class="Footer"><a href="https://support.google.com/websearch?p=fr_consumer_info&hl=fr&fg=1">Info consommateurs</a></div>
 
-    <div class="Footerlink"><a href="https://www.google.fr/preferences?hl=fr">Param&egrave;tres</a></div>
-    
+   <div class="Footer"><a href="https://www.google.fr/intl/fr_fr/policies/privacy/?fg=1">Confidentialit&eacute;</a></div>
 
+   <div class="Footer"><a href="https://www.google.fr/intl/fr_fr/policies/terms/?fg=1">Conditions</a></div>
 
+   <div class="Footer"><a href="https://www.google.fr/preferences?hl=fr">Param&egrave;tres</a></div>
+   <div class="Footer"><a href="https://www.google.com/?gfe_rd=cr&dcr=0&ei=Oe3EWrHiAuzS8AeJvqjQCw&gws_rd=cr&fg=1">Utiliser Google.com</a></div>
+ </div>
 </footer>
 </body>
 </html>
